tests/neg/varargsInMethodsT1625/caseClassConstructorVarArgs.scala
object T5 {
  case class Abc(x: String*, c: String*) //error
}